# Random-CPP-code

./: Array.cpp  BinaryTree.cpp  Box.cpp  FileHandler.cpp  FixedString.cpp  Html.cpp  InvertBinaryTree.cpp  Option.cpp  README.md  RustLikeEnum.cpp  ShellCommand.cpp  SmallString.cpp  StaticForLoop.cpp  StaticRangeGen  UserDefinedLiteral.cpp  angleConverter.hpp  bootloaderPrint.cpp  bucketSort.cpp  constexpr_structured_binding.cpp  customAlloc.cpp  customMalloc.cpp  freestandingMessageBoxA.cpp  freestandingPrint.cpp  initializer_list.cpp  ipv4.cpp  optionImplementation.cpp  parameterPackIteration.cpp  rawMessageBox.cpp  returnCArray.cpp  sameAs.cpp  staticAlloc.cpp  structMemeberVisibility.cpp  variadinStruct.cpp
Bf4_lessenedRecoil/: CMakeLists.txt  main.cpp
Bf4_syscalls/: CMakeLists.txt  README.md  main.cpp  memory.hpp  types.hpp  win32Utils.hpp
BootloaderTextOutput/: CMakeLists.txt  README.md  build.sh  clean.sh  link.ld  main.cpp  run.sh  start.s
BootloaderTextOutput/boot/grub/: grub.cfg
BootloaderTextOutput/include/: screen.h  string.h  system.h  types.h
CLI Chess/: Board.hpp  Makefile  Piece.hpp  Position.hpp  README.md  Rules.hpp  main.cpp
CmakeTest/: CMakeLists.txt  README.md  main.cpp
CmakeTest/include/: functions.h
LogTable/: CMakeLists.txt  README.md  main.cpp
Modules/: Makefile-zig  README.md  build.sh  buildClang.sh  main.cpp  moduleTest.cpp  run.bat  split.cpp
Modules-old/: IMPORTANT.txt  build.sh  buildClang.sh  main.cpp
QtItemGib/: CMakeLists.txt  items.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtReadHtml/: CMakeLists.txt  main.cpp
cmakeModuleTest/: CMakeLists.txt  bar.cxx  foo.cxx  main.cpp
embedResource/: main.cpp
headerUnits/: M.cppm  README.md  compile.txt  use.cpp
memory/: CMakeLists.txt  main.cpp  memory.h
modularLLVMBuild/: CMakeLists.txt  README.md  main.cpp
resourceEmbed/: CMakeLists.txt  main.cpp
stdlib/: memoryCopy.cpp  stringCopy.cpp
